# report-comparator

./: CHANGELOG.md  CONFIGURATION.md  README.md  config.example.yaml  pyproject.toml
src/report_comparator/: __init__.py  cli.py  comparator.py  config.py  docgen.py
tests/: fixture_builder.py  test_docs_drift.py  test_formatting_drift.py  test_geometry.py  test_implementation_review.py  test_modes_and_verbosity.py  test_picture_content.py  test_table_comparison.py  test_text_content.py  test_walking_skeleton.py
